examples/test/testpolicy6441.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6441
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key32: value3
      key37: value30
      key44: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value1
          key41: value9
      podSelector:
        matchLabels:
          key48: value26
          key27: value4
